--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types",
-    "changeset": "changeset",
+    "changeset": "changeset add",
+    "changeset:version": "changeset version",
+    "changeset:status": "changeset status",
     "version-packages": "changeset version",
     "release": "turbo run build --filter=docs^... && changeset publish"
   },
