--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "changeset:version": "changeset version",
     "changeset:status": "changeset status",
     "version-packages": "changeset version",
-    "release": "turbo run build --filter=docs^... && changeset publish"
+    "release": "turbo run build --filter=docs^... && changeset publish",
+    "preinstall": "node scripts/pre-install.js"
   },
   "devDependencies": {
     "@changesets/cli": "^2.29.7",
