--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "@repo/ui",
-  "version": "1.1.0",
-  "private": true,
+  "name": "@eduardidn-ss/repo-ui",
+  "version": "1.0.2",
+  "main": "dist/index.js",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
+  "private": false,
   "exports": {
     "./*": "./src/*.tsx"
   },
